--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 /* BASE STYLES
 /*******************************************/
 *:hover{
-  /* outline: 1px solid red; */
+  outline: 1px solid red;
 }
 body {
   margin: 0;
@@ -45,287 +45,813 @@ a{
 /******************************************
 /* LAYOUT
 /*******************************************/
-header {
-  margin: 0;
-  padding: 0;
-  background: url('/images/header.jpg') center;
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 80%);
-  border-radius: 0 0 100px 0;
-  height: 100%;
+@media screen and (min-width:561px) {
+  #menu__toggle {
+    opacity: 0;
+    /* visibility: hidden; */
+    display: none;
+  }
+
+  .menu__box{
+    display: flex;
+    align-items: center;
+    font-family: 'Cinzel', serif;
+    font-size: 12px;
+    color: rgb(255, 254, 254);
+    gap: .6rem;
+  }
+
+  .menu__item{
+    color: white;
+  }
+
+  .search img{
+    width: 0.8rem;
+    color: white;
+  }
+
+  .menu__item__last{
+    margin-right: 30px;
+  }
+
+  .search-bar{
+    display: none;
+    color: #CFD8DC;
+  }
+
+  header {
+    margin: 0;
+    padding: 0;
+    background: url('/images/header.jpg') center;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 80%);
+    border-radius: 0 0 100px 0;
+    height: 100%;
+    
+  }
   
-}
-
-.nav{
-  display: flex;
-  align-items: center;
-  margin: 0;
-  padding: 10px 20px;
-}
-
-.logo{
-  margin: 0 auto 0 0;
-  font-family: 'WindSong', cursive;
-}
-
-.navlist{
-  margin: 0;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.navlist li > a{
-  font-size: 11px;
-  color: white;
-  font-family: 'Cinzel', serif;
-}
-
-.nav-search{
-  width: 15px;
-  margin: 0 0 0 10px;
-}
-
-.nav-search img{
-  transform: translate(0, 30%);
-}
-
-header h3{
-  margin: 0;
-  color: white;
-  font-size: 50px;
-}
-
-.header-title{
-  position: relative;
-  width: 60%;
-  padding: 10% 5% 50% 10%;
-}
-
-.header-title p{
-  font-size: 10px;
-}
-
-.title{
-  font-size: 20px;
-}
-
-.title-btn{
-  padding: 3%;
-  text-align: center;
-  margin-top: 30px;
-  background: black;
-  width: 60%;
-  font-size: 16px;
-  /* border: 2px solid white; */
-}
-
-.title-btn h4{
-  margin: 0;
-  font-size: 12px;
-}
-
-main{
-  position: relative;
-  padding: 0 10%;
-}
-
-.discount{
-  position: absolute;
-  width: 30%;
-  background: rgb(10, 10, 10);
-  left: 10%;
-  top: -10%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px 10px;
-  font-size: 12px;
-  color: white;
-  box-shadow: 5px white;
-}
-
-.discount h3{
-  font-size: 10px;
-}
-
-.discount p{
-  text-align: center;
-}
-
-.discount p > span{
-  font-size: 18px;
-}
-
-.discount-btn{
-  margin-top: 10%;
-  background: white;
-  color: black;
-  padding: 10px;
-}
-
-.icon{
-  width: 60px;
-  /* background: white center;
-  clip-path: circle(50% at 50%); */
-}
-
-.services{
-  padding: 10%;
-  display: flex;
-  gap: 10px;
-  align-items: center;
-
-}
-
-.card1{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.card1 h3{
-  font-size: 12px;
-}
-
-.card1 p{
-  font-size: 10px;
-  text-align: center;
-}
-
-.about{
-  display: flex;
-  align-items: center;
-}
-
-.about-image{
-  width: 50%;
-  display: block;
-}
-
-.about-image img{
-  width: 100%;
-}
-
-.about-title{
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-}
-
-.about-title h3{
-  font-size: 30px;
-}
-
-.about-title p{
-  font-size: 12px;
-}
-
-.about-btn{
-  background: #DAA520;
-  width: 30%;
-  padding: 5px;
-}
-
-.about-btn a h3{
-  color: #04090a;
-  margin: 0;
-  font-size: 12px;
-  text-align: center;
-}
-
-.stylist-img img{
- width: 178px;
+  .nav{
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 10px 20px;
+  }
   
-}
-.stylist1{
-  width: 30%;
-}
-.stylist3{
+  .logo{
+    margin: 0 auto 0 0;
+    font-family: 'WindSong', cursive;
+  }
   
-}
-
-.style h3{
-  text-align: center;
+  .navlist{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
   
-}
-
-.style{
-  margin-top: 10%;
-}
-
-.stylist-info :is(h3, p){
-  margin: 0;
-}
-
-.stylist-info p{
-  font-size: 12px;
-}
-.stylist-info h3{
-  font-size: 12px;
-}
-.stylists{
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin:0;
+  .navlist li > a{
+    font-size: 11px;
+    color: white;
+    font-family: 'Cinzel', serif;
+  }
   
-  /* height: 600px; */
-  padding: 0;
+  .nav-search{
+    width: 15px;
+    margin: 0 0 0 10px;
+  }
+  
+  .nav-search img{
+    transform: translate(0, 30%);
+  }
+  
+  header h3{
+    margin: 0;
+    color: white;
+    font-size: 50px;
+  }
+  
+  .header-title{
+    position: relative;
+    width: 60%;
+    padding: 10% 5% 50% 10%;
+  }
+  
+  .header-title p{
+    font-size: 10px;
+  }
+  
+  .title{
+    font-size: 20px;
+  }
+  
+  .title-btn{
+    padding: 3%;
+    text-align: center;
+    margin-top: 30px;
+    background: black;
+    width: 60%;
+    font-size: 16px;
+    /* border: 2px solid white; */
+  }
+  
+  .title-btn h4{
+    margin: 0;
+    font-size: 12px;
+  }
+  
+  main{
+    position: relative;
+    padding: 0;
+  }
+  
+  .discount{
+    position: absolute;
+    width: 30%;
+    background: rgb(10, 10, 10);
+    left: 10%;
+    top: -10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 10px;
+    font-size: 12px;
+    color: white;
+    box-shadow: 5px white;
+  }
+  
+  .discount h3{
+    font-size: 10px;
+  }
+  
+  .discount p{
+    text-align: center;
+  }
+  
+  .discount p > span{
+    font-size: 18px;
+  }
+  
+  .discount-btn{
+    margin-top: 10%;
+    background: white;
+    color: black;
+    padding: 10px;
+  }
+  
+  .icon{
+    width: 60px;
+    /* background: white center;
+    clip-path: circle(50% at 50%); */
+  }
+  
+  .services{
+    padding: 10%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+  
+  }
+  
+  .card1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .card1 h3{
+    font-size: 12px;
+  }
+  
+  .card1 p{
+    font-size: 10px;
+    text-align: center;
+  }
+  
+  .about{
+    display: flex;
+    align-items: center;
+  }
+  
+  .about-image{
+    width: 50%;
+    display: block;
+  }
+  
+  .about-image img{
+    width: 100%;
+  }
+  
+  .about{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding: 3rem 3rem;
+    background: #0c101c;
+    /* gap: 10rem; */
+  }
+
+  .about-image{
+    /* background: url("/images/about2.jpg") cover; */
+  }
+
+  .about-image-text{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+  }
+  
+  .about-title h3{
+    font-size: 30px;
+  }
+
+  .about-text-btn{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .about p{
+    font-size: 12px;
+    width: 100%;
+  }
+  
+  .about-btn{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 5px;
+  }
+  
+  .about-btn a{
+    color: #DAA520;
+    margin: 0;
+    font-size: 12px;
+    text-align: center;
+    border: 1px solid #DAA520;
+    /* height: 1rem; */
+    width: 40%;
+    
+  }
+  
+  .stylist-img img{
+   width: 178px;
+    
+  }
+  .stylist1{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .stylist3{
+    
+  }
+  
+  .style h3{
+    text-align: center;
+    
+  }
+  
+  .style{
+    margin-top: 10%;
+  }
+  
+  .stylist-info :is(h3, p){
+    margin: 0;
+  }
+
+  .stylist-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .stylist-info p{
+    font-size: 12px;
+  }
+  .stylist-info h3{
+    font-size: 12px;
+  }
+  .stylists{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    margin:0;
+    
+    /* height: 600px; */
+    padding: 0;
+  }
+  
+  .offer{
+    background: url(/images/offer.jpg) no-repeat right;
+    padding: 0;
+    margin-top: 10%;
+  }
+  
+  .offer-title{
+    background: #0c101c;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    width: 40%;
+    font-size: 12px;
+    padding: 5% 5% 15%;
+  }
+  
+  .offer-title p > span{
+    font-size: 20px;
+  }
+  
+  .offer-btn{
+    background: #04090a;
+    width: 60%;padding: 8px;
+    margin-top: 10%;
+  }
+  
+  .lookbook{
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .lookbook h3{
+    text-align: center;
+  }
+  
+  .pics{
+    display: grid;
+    grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    gap: 10px;
+  }
+  
+  .pic1 img{
+    width: 150px;
+  }
+  footer {
+    margin-top: 10%;
+    padding: 10PX;
+    background: black;
+    text-align: center;
+    font-size: 12px;
+  }
 }
 
-.offer{
-  background: url(/images/offer.jpg) no-repeat right;
-  padding: 0;
-  margin-top: 10%;
-}
+@media screen and (max-width:561px){
+   /*------------------HAMBURGER___________*/
+   #menu__toggle {
+    opacity: 0;
+    /* visibility: hidden; */
+    display: none;
+  }
+  
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ .menu__box {
+    visibility: visible;
+    left: 0;
+    
+  }
+  
+  .menu__btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    
+    width: 26px;
+    height: 26px;
+  
+    cursor: pointer;
+    z-index: 100;
+  }
 
-.offer-title{
-  background: #0c101c;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  width: 40%;
-  font-size: 12px;
-  padding: 5% 5% 15%;
-}
+  .search{
+    display: none;
+  }
 
-.offer-title p > span{
-  font-size: 20px;
-}
+  .search-icon{
+    display: none;
+  }
+  
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+  
+    width: 100%;
+    height: 2px;
+  
+    background-color: #616161;
+  
+    transition-duration: .25s;
+  }
+  .menu__btn > span::before {
+    content: '';
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: '';
+    top: 8px;
+  }
+  
+  .menu__box {
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    z-index: 10;
+    width: 300px;
+    height: 100%;
+  
+    margin: 0;
+    padding: 50px 0;
+  
+    list-style: none;
+    background: blur;
+    background-color: #1b1b1bf6;
+    box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+  
+    transition-duration: .25s;
+  }
+  
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+  
+    color: rgb(204, 200, 200);
+  
+    font-family: 'Cinzel', serif;
+    font-size: 10px;
+    font-weight: 600;
+  
+    text-decoration: none;
+  
+    transition-duration: .25s;
+  }
+  .menu__item:hover {
+    background-color: #CFD8DC;
+  }
 
-.offer-btn{
-  background: #04090a;
-  width: 60%;padding: 8px;
-  margin-top: 10%;
-}
+  .menu__item__last{
+    /* padding:0; */
+  }
+  /*-----------------hamburger nmenu--------------*/
+  header {
+    margin: 0;
+    padding: 0;
+    background: url('/images/header.jpg') center no-repeat;
+    background-size: 250%;
+    background-position: 60% 30%;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 80%);
+    border-radius: 0 0 100px 0;
+    height: 100%;
+    
+  }
+  
+  .nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    padding: 0px 10px;
+  }
+  
+  .logo{
+    margin-left: 10%;
+    font-family: 'WindSong', cursive;
+  }
+  
+  .navlist{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  
+  .navlist li > a{
+    font-size: 11px;
+    color: white;
+    font-family: 'Cinzel', serif;
+  }
+  
+  .nav-search{
+    width: 15px;
+    margin: 0 0 0 10px;
+  }
+  
+  .nav-search img{
+    transform: translate(0, 30%);
+  }
+  
+  header h3{
+    margin: 0;
+    color: white;
+    font-size: 50px;
+  }
+  
+  .header-title{
+    position: relative;
+    width: 60%;
+    padding: 10% 5% 50% 10%;
+  }
+  
+  .header-title p{
+    font-size: 10px;
+  }
+  
+  .title{
+    font-size: 20px;
+  }
+  
+  .title-btn{
+    display: none;
+    padding: 3%;
+    text-align: center;
+    margin-top: 30px;
+    background: black;
+    width: 60%;
+    font-size: 16px;
+    /* border: 2px solid white; */
+  }
+  
+  .title-btn h4{
+    margin: 0;
+    font-size: 12px;
+  }
+  
+  main{
+    position: relative;
+    padding: 0;
+  }
+  
+  .discount{
+    position: absolute;
+    width: 60vw;
+    background: rgba(10, 10, 10, 0.808);
+    left: 1rem;
+    top: -8rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 5px;
+    font-size: 12px;
+    color: white;
+    box-shadow: 5px white;
+  }
+  
+  .discount h3{
+    font-size: 10px;
+  }
+  
+  .discount p{
+    text-align: center;
+    font-size: 8px;
+  }
+  
+  .discount p > span{
+    font-size: 12px;
+  }
+  
+  .discount-btn{
+    margin-top: 0.5rem;
+    outline:1px solid white;
+    color: white;
+    padding: 2px;
+  }
+  
+  .icon{
+    width: 60px;
+    /* background: white center;
+    clip-path: circle(50% at 50%); */
+  }
+  
+  .services{
+    padding: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    align-items: center;
+  
+  }
+  
+  .card1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
+  
+  .card1 h3{
+    font-size: 12px;
+  }
+  
+  .card1 p{
+    font-size: 10px;
+    text-align: center;
+  }
+  
+  .about{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .about-image{
+    width: 100%;
+    display: block;
+  }
+  
+  .about-image img{
+    width: 100%;
+  }
+  
+  .about{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding: 1rem 1rem;
+    background: #0c101c;
+    /* gap: 10rem; */
+  }
 
-.lookbook{
-  margin-top: 10%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.lookbook h3{
-  text-align: center;
-}
+  .about-image{
+    /* background: url("/images/about2.jpg") cover; */
+  }
 
-.pics{
-  display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr 1fr;
-  gap: 10px;
-}
+  .about-image-text{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+  
+  .about h3{
+    font-size: 20px;
+    text-align: center;
+  }
 
-.pic1 img{
-  width: 150px;
+  .about-text-btn{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  .about p{
+    font-size: 12px;
+    width: 100%;
+    text-align: justify;
+  }
+  
+  .about-btn{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 5px;
+  }
+  
+  .about-btn a{
+    color: #DAA520;
+    margin: 0;
+    font-size: 8px;
+    text-align: center;
+    border: 1px solid #DAA520;
+    /* height: 1rem; */
+    width: 40%;
+    
+  }
+
+  .about-btn h3
+{
+  font-size: 8px;
 }
-footer {
-  margin-top: 10%;
-  padding: 10PX;
-  background: black;
-  text-align: center;
-  font-size: 12px;
+  
+  .stylist-img img{
+   width: 178px;
+    
+  }
+  .stylist1{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .stylist3{
+    
+  }
+  
+  .style h3{
+    text-align: center;
+    
+  }
+  
+  .style{
+    margin-top: 10%;
+  }
+  
+  .stylist-info :is(h3, p){
+    margin: 0;
+  }
+
+  .stylist-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .stylist-info p{
+    font-size: 12px;
+  }
+  .stylist-info h3{
+    font-size: 12px;
+  }
+  .stylists{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    margin:0;
+    
+    /* height: 600px; */
+    padding: 0;
+  }
+  
+  .offer{
+    background: url(/images/offer.jpg) no-repeat center;
+    padding: 0;
+    margin-top: 10%;
+  }
+  
+  .offer-title{
+    background: #0c101cb2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    font-size: 12px;
+    padding: 5% 5% 15%;
+  }
+
+  .offer-title p{
+    text-align: center;
+  }
+  
+  .offer-title p > span{
+    font-size: 20px;
+    text-align: center;
+  }
+  
+  .offer-btn{
+    background: #04090a;
+    width: 30vw;
+    padding: 8px;
+    margin-top: 10%;
+    text-align: center;
+  }
+  
+  .lookbook{
+    margin-top: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .lookbook h3{
+    text-align: center;
+  }
+  
+  .pics{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  
+  .pic1 img{
+    width: 150px;
+  }
+  footer {
+    margin-top: 10%;
+    padding: 10PX;
+    background: black;
+    text-align: center;
+    font-size: 8px;
+  }
 }
 
 /******************************************
