--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@
 /* BASE STYLES
 /*******************************************/
 *:hover{
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 body {
   margin: 0;
